syntax = "proto3";

package chat_server_v1;
option go_package = "github.com/lookandhate/microservice-course/chat/pkg/chat_v1;chat_v1";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "validate/validate.proto";
import "google/api/annotations.proto";


service Chat {
  rpc CreateChat(CreateChatRequest) returns (CreateChatResponse) {
    option (google.api.http) = {
      post: "/v1/chat"
      body: "*"
    };
  };
  rpc DeleteChat(DeleteChatRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/v1/chat"
    };
  };
  rpc SendMessage(SendMessageRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/v1/message"
      body: "*"
    };
  };
}

message CreateChatRequest {
  repeated int64 user_ids = 1 [(validate.rules).repeated.items.int64.gte = 0];
}

message CreateChatResponse {
  int64 id = 1 [(validate.rules).int64.gte = 0];
}

message DeleteChatRequest {
  int64 id = 1 [(validate.rules).int64.gte = 0];
}

message SendMessageRequest {
  int64 from = 1;
  string text = 2 [(validate.rules).string.min_len = 1];
  google.protobuf.Timestamp timestamp = 3;
  int64 chat_id = 4 [(validate.rules).int64.gte = 0];
}
